# itc-rag-chatbot

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: chat.py
app/core/: config.py
app/db/: vector_store.py
app/ingest/: chunking.py  website.py
app/rag/: embeddings.py  prompt.py  retriever.py
data/website/: about.md
scripts/: ingest_website.py
