[project]
name = "itc-rag-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "kevin.li",email = "kevin.li@trendminer.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.125.0,<0.126.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai (>=2.13.0,<3.0.0)",
    "chromadb (>=1.3.7,<2.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "torch (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
